src/test/ui/keyword/extern/keyword-extern-as-identifier-use.rs
use extern::foo; //~ ERROR expected identifier, found keyword `extern`
                 //~| ERROR unresolved import `extern`

fn main() {}
